<?xml version="1.0" ?>
<package format="3">
  <name>joint_state_topic_hardware_interface</name>
  <version>1.0.0</version>
  <description>
    ros2_control hardware interface for JointState topic based control
  </description>

  <maintainer email="marq.razz@gmail.com">Marq Rasmussen</maintainer>
  <maintainer email="jafar.uruc@gmail.com">Jafar Uruc</maintainer>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="christoph.froehlich@ait.ac.at">Christoph Froehlich</maintainer>

  <author email="jafar.uruc@gmail.com">Jafar Uruc</author>
  <author email="marq.razz@gmail.com">Marq Rasmussen</author>

  <license>Apache License 2.0</license>

  <url type="website">https://github.com/ros-controls/topic_based_hardware_interfaces</url>
  <url type="bugtracker">https://github.com/ros-controlsros-controls/topic_based_hardware_interfaces/issues</url>
  <url type="repository">https://github.com/ros-controlsros-controls/topic_based_hardware_interfaces</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros2_control_cmake</build_depend>

  <depend>angles</depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>control_msgs</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>forward_command_controller</test_depend>
  <test_depend>joint_state_broadcaster</test_depend>
  <test_depend>joint_trajectory_controller</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  <test_depend>topic_tools</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
